--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.6.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.0",
     "dayjs": "^1.11.13",
     "mongoose": "^8.6.3",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
