--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.0",
     "dayjs": "^1.11.13",
+    "firebase": "^10.13.2",
     "mongoose": "^8.6.3",
     "next": "14.2.13",
     "react": "^18",
