--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
