--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.0",
     "dayjs": "^1.11.13",
+    "emoji-picker-react": "^4.12.0",
     "firebase": "^10.13.2",
     "mongoose": "^8.6.3",
     "next": "14.2.13",
@@ -20,6 +21,7 @@
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "remixicon": "^4.4.0",
     "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
