--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "remixicon": "^4.4.0",
-    "socket.io-client": "^4.8.0",
-    "yet-another-react-lightbox": "^3.21.6"
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
